--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
+    "shortid": "^2.2.16",
     "winston": "^3.8.1",
     "winston-express": "^0.1.1"
   },
@@ -32,6 +33,7 @@
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
+    "@types/shortid": "^0.0.29",
     "source-map-support": "^0.5.21",
     "tslint": "^6.1.3",
     "typescript": "^4.8.2"
